force-app/main/default/objects/FieldValueMapping__c/FieldValueMapping__c.object-meta.xml
<CustomObject>
    <label>FieldValueMapping</label>
    <nameField>
        <displayFormat>FVM-/{yyyyMMdd}/{000}</displayFormat>
        <label>FieldValueMapping名称</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Value Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>