force-app/main/default/objects/FieldValueMapping__c/fields/BizValue__c.field-meta.xml
<CustomField>
    <fullName>BizValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BizValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>