force-app/main/default/objects/FieldValueMapping__c/fields/InterfaceValue__c.field-meta.xml
<CustomField>
    <fullName>InterfaceValue__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>InterfaceValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>