force-app/main/default/objects/FieldValueMapping__c/fields/PickListField__c.field-meta.xml
<CustomField>
    <fullName>PickListField__c</fullName>
    <label>PickListField</label>
    <referenceTo>FieldMapping__c</referenceTo>
    <relationshipLabel>FieldValueMapping</relationshipLabel>
    <relationshipName>FieldValueMapping</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>